<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="89dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/twHalf"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_half"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_light"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btnErr1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:onClick="onClickRate"
                    android:text="@string/btn_err1" />

                <Button
                    android:id="@+id/btnErr2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:onClick="onClickRate"
                    android:text="@string/btn_err2" />

                <Button
                    android:id="@+id/btnErr3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:onClick="onClickRate"
                    android:text="@string/btn_err3" />

                <Button
                    android:id="@+id/btnErr4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:onClick="onClickRate"
                    android:text="@string/btn_err4" />

                <Button
                    android:id="@+id/btnErr5"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:onClick="onClickRate"
                    android:text="@string/btn_err5" />
            </LinearLayout>

            <View
                android:id="@+id/divider4"
                android:layout_width="3dp"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:background="@drawable/gradvertical" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvOne"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/tv_one"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_light"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btnErr6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:onClick="onClickRate"
                    android:text="@string/btn_err6" />

                <Button
                    android:id="@+id/btnErr7"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:onClick="onClickRate"
                    android:text="@string/btn_err7" />

                <Button
                    android:id="@+id/btnErr8"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:onClick="onClickRate"
                    android:text="@string/btn_err8" />

                <Button
                    android:id="@+id/btnErr9"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:onClick="onClickRate"
                    android:text="@string/btn_err9" />

                <Button
                    android:id="@+id/btnErr10"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:onClick="onClickRate"
                    android:text="@string/btn_err10" />
            </LinearLayout>

            <View
                android:id="@+id/divider5"
                android:layout_width="3dp"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:background="@drawable/gradvertical" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvTwo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_two"
                    android:textAlignment="center"
                    android:textColor="@android:color/background_light"
                    android:textSize="24sp" />

                <Button
                    android:id="@+id/btnErr11"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:onClick="onClickRate"
                    android:text="@string/btn_err11"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/btnErr12"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:onClick="onClickRate"
                    android:text="@string/btn_err12" />

                <Button
                    android:id="@+id/btnErr13"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:onClick="onClickRate"
                    android:text="@string/btn_err13" />

                <Button
                    android:id="@+id/btnErr14"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:onClick="onClickRate"
                    android:text="@string/btn_err14"
                    android:textAlignment="center"
                    android:textSize="14sp" />

                <Button
                    android:id="@+id/btnErr15"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:enabled="false"
                    android:onClick="onClickRate"
                    android:text="@string/btn_err15" />
            </LinearLayout>
        </LinearLayout>

        <View
            android:id="@+id/divider3"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_weight="0"

            android:background="@drawable/gradhorizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="7"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnOne"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:enabled="false"
                android:onClick="onClickRate"
                android:text="@string/btn_one"
                android:textSize="24sp" />

            <Button
                android:id="@+id/btnZero"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:enabled="false"
                android:onClick="onClickRate"
                android:text="@string/btn_zero"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/tvRate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/frramegreen"
                android:gravity="center_vertical"
                android:text="10.0"
                android:textAlignment="center"
                android:textColor="@android:color/background_light"
                android:textSize="36sp" />

            <Button
                android:id="@+id/btnEnter"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:enabled="false"
                android:onClick="onClickRate"
                android:text="@string/btn_enter"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>